<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_For_Screen" Id="{383335f7-6dd9-4c6b-9a6f-36a75ac8defb}">
    <Declaration><![CDATA[TYPE ST_For_Screen :
STRUCT
	data				:WSTRING(255);
	alarmy				:WSTRING(1000);
	user				:WSTRING(80);
	bErrorOccure		:BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>